web/app.css
/* app css stylesheet */

.menu {
    list-style: none;
    border-bottom: 0.1em solid black;
    margin-bottom: 2em;
    padding: 0 0 0.5em;
}

.menu:before {
    content: '[';
}

.menu:after {
    content: ']';
}

.menu > li {
    display: inline;
}

.menu > li:before {
    content: '|';
    padding-right: 0.3em;
}

.menu > li:nth-child(1):before {
    content: '';
    padding: 0;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 9999;
    color: white;
    display: inline-block;
    border-radius: 10px;
    cursor: wait;
}

.vertical-align {
    display: flex;
    align-items: center;
    height: 100%;
}

.gravatar-row {
    padding-top: 10px;
    padding-bottom: 10px;
}

.keyholder-apply {
    padding-top: 15px;
    padding-bottom: 15px;
}

.subpanel {
    padding-bottom: 20px;
}

[ng\:cloak],
[ng-cloak],
[data-ng-cloak],
[x-ng-cloak],
.ng-cloak,
.x-ng-cloak {
    display: none !important;
    background-color: #f8f8f8;
}

.pagination {
    margin: 0px;
}

.before-table {
    margin-top: 20px;
}

